// TrackingUpdate — domain class (ported/refined from Assignment 2 design)
// TODO: attributes, methods, invariants — document any change vs A2 here.

export class TrackingUpdate {
  // TODO
}
