// AssignmentService — application service layer
export class AssignmentService {
  // TODO
}
