// OrderService — application service layer
export class OrderService {
  // TODO
}
