// PaymentService — application service layer
export class PaymentService {
  // TODO
}
