// TrackingService — application service layer
export class TrackingService {
  // TODO
}
