classDiagram
    %% ==================== DOMAIN CLASSES ====================
    
    class SmartFMController {
        -orderService: OrderService
        -paymentService: PaymentService
        -assignmentService: AssignmentService
        -trackingService: TrackingService
        -branchRepository: BranchRepository
        -customerRepository: CustomerRepository
        +browseOfferings(criteria): Promise~Offering~
        +placeOrder(input): Promise~OrderConfirmation~
        +processPayment(input): Promise~PaymentConfirmation~
        +assignVehicleDriver(shipmentId, branchId): Promise~AssignmentResult~
        +trackShipment(trackingNo): Promise~TrackingHistory~
        +addTrackingUpdate(input): Promise~UpdateConfirmation~
        +initialize(): Promise~void~
        +registerCustomer(input): Promise~Customer~
    }

    class Customer {
        -id: string
        -name: string
        -phone: string
        -email: string
        -address: string
        -createdAt: Date
        -orderIds: string[]
        +updateProfile(updates): void
        +addOrder(orderId): void
        +getOrderHistory(): string[]
    }

    class Order {
        -id: string
        -customerId: string
        -offeringId: string
        -goodsDescription: string
        -weightKg: number
        -dimensionsCm: string
        -createdAt: Date
        -status: OrderStatus
        -invoice: Invoice
        -shipments: Shipment[]
        +calculateCharge(): number
        +createShipments(destinations): Shipment[]
        +markPaid(): void
        +cancel(reason): boolean
        +getInvoice(): Invoice
        +getShipments(): Shipment[]
    }

    class Invoice {
        -id: string
        -orderId: string
        -baseAmount: number
        -payments: Payment[]
        -supplementaryCharges: Charge[]
        -createdAt: Date
        +getTotal(): number
        +addSupplementaryCharge(reason, amount): void
        +addPayment(payment): void
        +getPaidAmount(): number
        +getBalance(): number
        +isPaid(): boolean
        +generateReceipt(): string
    }

    class Payment {
        -id: string
        -invoiceId: string
        -method: PaymentMethod
        -amount: number
        -transactionRef: string
        -status: PaymentStatus
        -error: string
        -isDeposit: boolean
        -createdAt: Date
        +isSuccess(): boolean
        +isFullSettlement(invoiceTotal): boolean
        +getMethodLabel(): string
    }

    class PaymentStrategy {
        <<interface>>
        +method: PaymentMethod
        +process(amount, metadata): Promise
    }

    class CashStrategy {
        +process(amount, metadata): Promise
    }

    class CardStrategy {
        +process(amount, metadata): Promise
    }

    class BankTransferStrategy {
        +process(amount, metadata): Promise
    }

    class PaymentStrategyFactory {
        +create(method): PaymentStrategy
    }

    class Shipment {
        -id: string
        -orderId: string
        -trackingNo: string
        -origin: string
        -destination: string
        -weight: number
        -requiredVehicleType: string
        -status: ShipmentStatus
        -vehicleId: string
        -driverId: string
        -currentLocation: string
        -lastUpdated: Date
        -trackingUpdates: TrackingUpdate[]
        +addTrackingUpdate(status, location): void
        +getStatusHistory(): TrackingUpdate[]
        +assign(vehicle, driver): void
    }

    class TrackingUpdate {
        -id: string
        -shipmentId: string
        -status: ShipmentStatus
        -location: string
        -source: TrackingSource
        -timestamp: Date
    }

    class Branch {
        -id: string
        -name: string
        -address: string
        -vehicleIds: string[]
        -staffIds: string[]
        -driverIds: string[]
        +findAvailableVehicle(type): Vehicle
        +findAvailableDriver(type): Driver
        +transferVehicle(vehicleId, targetBranchId): void
        +rehydrateResources(): Promise
    }

    class Vehicle {
        -id: string
        -branchId: string
        -type: VehicleType
        -capacityKg: number
        -capacityVolumeM3: number
        -status: VehicleStatus
        -assignedShipmentId: string
        +canCarry(weight, volume): boolean
        +assignToShipment(shipmentId): void
        +release(): void
        +isAvailable(): boolean
    }

    class StaffMember {
        -id: string
        -branchId: string
        -name: string
        -phone: string
        -email: string
        -role: StaffRole
        -credentials: Credentials
        +authenticate(credentials): boolean
        +updateProfile(updates): void
        +hasRole(role): boolean
    }

    class Driver {
        -licenseExpiry: Date
        -assignedVehicle: string
        -vehicleTypes: string[]
        -status: DriverStatus
        +isQualifiedFor(vehicleType): boolean
        +assignToShipment(shipmentId): void
        +release(): void
        +isAvailable(): boolean
    }


    class TrackingNotifier {
        -observers: Observer[]
        +subscribe(observer): void
        +unsubscribe(observer): void
        +notify(shipmentId, update): void
    }

    class Observer {
        <<interface>>
        +onUpdate(shipmentId, update): void
    }

    %% ==================== REPOSITORIES ====================

    class IRepository {
        <<interface>>
        +findAll(): Promise
        +findById(id): Promise
        +save(entity): Promise
        +delete(id): Promise
    }

    class JsonFileRepository {
        -filePath: string
        +findAll(): Promise
        +findById(id): Promise
        +save(entity): Promise
        +delete(id): Promise
    }

    class CustomerRepository {
        +findByPhone(phone): Promise
        +findByEmail(email): Promise
    }

    class OrderRepository {
        +findByCustomerId(customerId): Promise
        +findByStatus(status): Promise
    }

    class VehicleRepository {
        +findAvailableByType(branchId, type): Promise
    }

    class DriverRepository {
        +findAvailableDriver(branchId, vehicleType): Promise
        +findExpiringLicences(): Promise
    }

    class ShipmentRepository {
        +findByTrackingNo(trackingNo): Promise
        +findByStatus(status): Promise
        +findPaidUnassigned(): Promise
    }

    class PaymentRepository {
        +findByInvoiceId(invoiceId): Promise
    }

    class BranchRepository {
        +findByLocation(origin, destination): Promise
        +findById(branchId): Promise
    }

    class InvoiceRepository {
        +findByOrderId(orderId): Promise
        +findById(invoiceId): Promise
    }

    class TrackingUpdateRepository {
        +findByShipmentId(shipmentId): Promise
    }

    %% ==================== SERVICES ====================

    class OrderService {
        -orderRepository: OrderRepository
        -customerRepository: CustomerRepository
        -invoiceRepository: InvoiceRepository
        -shipmentRepository: ShipmentRepository
        +searchOfferings(criteria): Promise
        +createOrder(customerId, offeringId, goodsDetails): Promise
    }

    class PaymentService {
        -paymentRepository: PaymentRepository
        -invoiceRepository: InvoiceRepository
        -paymentStrategyFactory: PaymentStrategyFactory
        +pay(invoiceId, method, metadata): Promise
    }

    class AssignmentService {
        -shipmentRepository: ShipmentRepository
        -branchRepository: BranchRepository
        -vehicleRepository: VehicleRepository
        -driverRepository: DriverRepository
        +findUnassignedShipments(): Promise
        +assign(shipmentId, branchId): Promise
    }

    class TrackingService {
        -shipmentRepository: ShipmentRepository
        -trackingUpdateRepository: TrackingUpdateRepository
        -trackingNotifier: TrackingNotifier
        +getTrackingHistory(trackingNo): Promise
        +addUpdate(trackingNo, status, location): Promise
    }

    %% ==================== RELATIONSHIPS ====================

    %% SmartFMController → Services (dependency/delegation)
    SmartFMController --> OrderService : delegates to
    SmartFMController --> PaymentService : delegates to
    SmartFMController --> AssignmentService : delegates to
    SmartFMController --> TrackingService : delegates to

    %% SmartFMController → Repositories (dependency)
    SmartFMController --> BranchRepository : uses
    SmartFMController --> CustomerRepository : uses

    %% Service → Repository dependencies
    OrderService --> OrderRepository : uses
    OrderService --> CustomerRepository : uses
    OrderService --> InvoiceRepository : uses
    OrderService --> ShipmentRepository : uses

    PaymentService --> PaymentRepository : uses
    PaymentService --> InvoiceRepository : uses
    PaymentService --> PaymentStrategyFactory : uses

    AssignmentService --> ShipmentRepository : uses
    AssignmentService --> BranchRepository : uses
    AssignmentService --> VehicleRepository : uses
    AssignmentService --> DriverRepository : uses

    TrackingService --> ShipmentRepository : uses
    TrackingService --> TrackingUpdateRepository : uses
    TrackingService --> TrackingNotifier : uses

    %% Domain relationships — Composition (*--) for owned/embedded sub-objects
    Order "1" *-- "1" Invoice : generates
    Order "1" *-- "1..*" Shipment : creates
    Invoice "1" *-- "0..*" Payment : records
    Shipment "1" *-- "0..*" TrackingUpdate : has

    %% Domain relationships — Directed association (-->) for FK references
    Customer "1" --> "0..*" Order : places
    Shipment "0..*" --> "0..1" Vehicle : assigned to
    Shipment "0..*" --> "0..1" Driver : assigned to
    Branch "1" --> "0..*" Vehicle : manages
    Branch "1" --> "0..*" StaffMember : employs
    Branch "1" --> "0..*" Driver : employs

    %% Inheritance
    StaffMember <|-- Driver : extends

    %% Strategy pattern
    PaymentStrategy <|.. CashStrategy
    PaymentStrategy <|.. CardStrategy
    PaymentStrategy <|.. BankTransferStrategy
    PaymentStrategyFactory --> PaymentStrategy : creates

    %% Observer pattern
    TrackingNotifier "1" o-- "0..*" Observer : observers

    %% Enum dependencies
    Order ..> OrderStatus
    Payment ..> PaymentMethod
    Payment ..> PaymentStatus
    Shipment ..> ShipmentStatus
    Vehicle ..> VehicleType
    Vehicle ..> VehicleStatus
    Driver ..> DriverStatus
    StaffMember ..> StaffRole
    TrackingUpdate ..> TrackingSource

    %% Repository implementations
    IRepository <|.. JsonFileRepository
    JsonFileRepository <|-- CustomerRepository
    JsonFileRepository <|-- OrderRepository
    JsonFileRepository <|-- VehicleRepository
    JsonFileRepository <|-- DriverRepository
    JsonFileRepository <|-- ShipmentRepository
    JsonFileRepository <|-- PaymentRepository
    JsonFileRepository <|-- BranchRepository
    JsonFileRepository <|-- InvoiceRepository
    JsonFileRepository <|-- TrackingUpdateRepository

    %% Enums
    class OrderStatus {
        <<enumeration>>
        DRAFT
        PENDING_PAYMENT
        PAID
        ASSIGNED
        IN_TRANSIT
        DELIVERED
        CANCELLED
    }

    class PaymentMethod {
        <<enumeration>>
        CASH
        CARD
        BANK_TRANSFER
    }

    class PaymentStatus {
        <<enumeration>>
        PENDING
        SUCCESS
        FAILED
    }

    class TrackingSource {
        <<enumeration>>
        GPS
        DRIVER
        SYSTEM
    }

    class ShipmentStatus {
        <<enumeration>>
        UNASSIGNED
        PENDING
        PICKED_UP
        IN_TRANSIT
        DELIVERED
        EXCEPTION
    }

    class VehicleStatus {
        <<enumeration>>
        AVAILABLE
        IN_USE
        MAINTENANCE
    }

    class DriverStatus {
        <<enumeration>>
        AVAILABLE
        IN_USE
        UNAVAILABLE
    }

    class VehicleType {
        <<enumeration>>
        TRUCK_2T
        TRUCK_5T
        VAN
        MOTORBIKE
    }

    class StaffRole {
        <<enumeration>>
        BRANCH_STAFF
        DRIVER
        OPERATIONS_MANAGER
        ADMIN
    }